--- a/html/app-teammember.html
+++ b/html/app-teammember.html
@@ -29,8 +29,8 @@
                                       <div class="row">
                                           <div class="col-lg-12">
                                               <header>
-                                                  <h4>Billing & Invoice</h4>
-                                                  <p>Your subscriptions useage and invoice payment receipts.</p>
+                                                  <h4>Team Members</h4>
+                                                  <p>Invite Team members to Start colloborating on Projects.</p>
                                               </header>
                                            
                                               <div class="invite-team">
