--- a/html/create-new-discussion-thread.html
+++ b/html/create-new-discussion-thread.html
@@ -32,11 +32,11 @@
 								<div class="row">
 									<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 left">
 										<div class="form-group">
-											<label for="input-id" >Discussion topice/ Thread</label>
+											<label for="input-id" >Discussion topice/ Thread - Topic / Thread </label>
 											<input type="text" name="" id="input" class="form-control" value="" required="required" pattern="" title="">
 										</div>
 
-										<label for="input-id" >Discussion topice/ Thread</label>
+										<label for="input-id" >Discussion topice/ Thread - Note / Comments</label>
 										<div id="txtEditor">
 						        			4165
 						        		</div>
@@ -46,7 +46,7 @@
 										<div action="#" class="dropzone dz-clickable" id="dropzone">                    						
 					                    	<div class="dz-default dz-message">
 					                    		
-					                    		<span>Drag & Drop Files</span>
+					                    		<span>Please add necessary and supporting files</span>
 					                    	</div>                    	 
 					                     </div>
 									</div>
@@ -54,7 +54,7 @@
 							</div>
 						<footer>
 							<p>11 members can access this message - Do you like to remove someone from the discusion.</p>
-							<a href="" class="blue-underline">Click here</a>
+							<a href="create-new-discussion-thread-remove.html" class="blue-underline">Click here</a>
 						</footer>
 					</div>
 					<button type="button" class="btn btn-success">Post Message</button>
