--- a/html/html_Moudles/nav.html
+++ b/html/html_Moudles/nav.html
@@ -43,9 +43,12 @@
         <li>
           <a href="">Welcome David Webb</a>
         </li>
-        <li class="">
+        <li>
+           <a href="app-settings.html" <i class="setting"></i></a>
+        </li>
+        <!-- <li class="">
           <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="setting"></i></a>
-          <div class="triangle"></div>
+          
           <ul class="dropdown-menu right">
             <li>
               <a href="app-update-profile.html">Edit Your Profile</a>
@@ -66,7 +69,7 @@
               <a href="login.html">Logoff</a>
             </li>
           </ul>
-        </li>
+        </li> -->
         <li class="">
           <a href="login.html"><i class="logout"></i></a>
         </li>
