--- a/html/html_Moudles/workspace-nav.html
+++ b/html/html_Moudles/workspace-nav.html
@@ -13,11 +13,11 @@
 					    <!-- Collect the nav links, forms, and other content for toggling -->
 					    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 					      <ul class="nav navbar-nav">
-					        <li class="active"><a href="#"><span class="workspace"></span>Workspace</a></li>
-					        <li class="active"><a href="#"><span class="discussion"></span>Discussion</a></li>
-					        <li class="active"><a href="#"><span class="todo-png"></span>To-Do List</a></li>
-					        <li><a href="#"><span class="issue-tracker"></span>Issue Tracker</a></li>					       
-					        <li><a href="#"><span class="wiki"></span>Wiki</a></li>
+					        <li class="active"><a href="workspace-dashboad.html"><span class="workspace"></span>Workspace</a></li>
+					        <li class="active"><a href="create-project-works-discussion.html"><span class="discussion"></span>Discussion</a></li>
+					        <li class="active"><a href="to-do-todo.html"><span class="todo-png"></span>To-Do List</a></li>
+					        <li><a href="issuestracker.html"><span class="issue-tracker"></span>Issue Tracker</a></li>					       
+					        <li><a href="wiki.html"><span class="wiki"></span>Wiki</a></li>
 					      </ul>					       					        
 					     
 					      <ul class="nav navbar-nav navbar-right">
