--- a/app-teammember.html
+++ b/app-teammember.html
@@ -84,9 +84,12 @@
                 <li>
                   <a href="">Welcome David Webb</a>
                 </li>
-                <li class="">
+                <li>
+                   <a href="app-settings.html" <i class="setting"></i></a>
+                </li>
+                <!-- <li class="">
                   <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="setting"></i></a>
-                  <div class="triangle"></div>
+                  
                   <ul class="dropdown-menu right">
                     <li>
                       <a href="app-update-profile.html">Edit Your Profile</a>
@@ -107,7 +110,7 @@
                       <a href="login.html">Logoff</a>
                     </li>
                   </ul>
-                </li>
+                </li> -->
                 <li class="">
                   <a href="login.html"><i class="logout"></i></a>
                 </li>
@@ -161,8 +164,8 @@
                                       <div class="row">
                                           <div class="col-lg-12">
                                               <header>
-                                                  <h4>Billing & Invoice</h4>
-                                                  <p>Your subscriptions useage and invoice payment receipts.</p>
+                                                  <h4>Team Members</h4>
+                                                  <p>Invite Team members to Start colloborating on Projects.</p>
                                               </header>
                                            
                                               <div class="invite-team">
