--- a/create-new-discussion-thread-remove.html
+++ b/create-new-discussion-thread-remove.html
@@ -85,7 +85,7 @@
 		          <a href="">Welcome David Webb</a>
 		        </li>
 		        <li>
-		           <a href="app-settings.html" <i class="setting"></i></a>
+		           <a href="app-settings.html"> <i class="setting"></i></a>
 		        </li>
 		        <!-- <li class="">
 		          <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="setting"></i></a>
@@ -164,11 +164,9 @@
 									        <li class="dropdown">
 									          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others <span class="caret"></span></a>
 									          <ul class="dropdown-menu">
-									            <li><a href="#">Action</a></li>
-									            <li><a href="#">Another action</a></li>
-									            <li><a href="#">Something else here</a></li>
-									            <li role="separator" class="divider"></li>
-									            <li><a href="#">Separated link</a></li>
+									            <li><a href="invite-team-members.html">Invite Team Members</a></li>
+									            <li><a href="reports.html">Reports</a></li>
+									            <li><a href="workspace-dashboad.html">Archive Workspace</a></li>
 									          </ul>
 									        </li>
 									      </ul>
