--- a/html/create-topic-discussion.html
+++ b/html/create-topic-discussion.html
@@ -26,7 +26,7 @@
 			<div class="topic-discuss">
 					<header class="clearfix">
 						<div class="textbox">
-							<a class="backy">Back</a>
+							<a href="create-project-works-discussion.html" class="backy">Back</a>
 						</div>
 						<div class="ribbon">
 								<i class="my-icon"><i></i></i>
