--- a/app-change-password.html
+++ b/app-change-password.html
@@ -85,7 +85,7 @@
                   <a href="">Welcome David Webb</a>
                 </li>
                 <li>
-                   <a href="app-settings.html" <i class="setting"></i></a>
+                   <a href="app-settings.html"> <i class="setting"></i></a>
                 </li>
                 <!-- <li class="">
                   <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="setting"></i></a>
