--- a/html/html_Moudles/workspace-nav.html
+++ b/html/html_Moudles/workspace-nav.html
@@ -24,11 +24,9 @@
 					        <li class="dropdown">
 					          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others <span class="caret"></span></a>
 					          <ul class="dropdown-menu">
-					            <li><a href="#">Action</a></li>
-					            <li><a href="#">Another action</a></li>
-					            <li><a href="#">Something else here</a></li>
-					            <li role="separator" class="divider"></li>
-					            <li><a href="#">Separated link</a></li>
+					            <li><a href="invite-team-members.html">Invite Team Members</a></li>
+					            <li><a href="reports.html">Reports</a></li>
+					            <li><a href="workspace-dashboad.html">Archive Workspace</a></li>
 					          </ul>
 					        </li>
 					      </ul>
