--- a/create-topic-discussion.html
+++ b/create-topic-discussion.html
@@ -264,6 +264,10 @@
 					    	<h4 class="media-heading">Postd By David Webb</h4>
 						   <div class="content">
 						  	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure consectetur mollitia ipsa minima iste quia magnam, aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat.</p>
+
+						  	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure consectetur mollitia ipsa minima iste quia magnam, aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat.</p>
+
+						  	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure consectetur mollitia ipsa minima iste quia magnam, aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat.</p>
 						   </div>
 						   <footer>
 						   	<span class="time">10th May 2015 at 11:30 AM</span> <span class="humantime">45 Min Before</span>
@@ -275,6 +279,44 @@
 
 <span class="bubble">Yesterday</span>
 
+					<div class="media">
+					  <div class="media-left">
+					    <a href="#">
+					      <img class="media-object" src="img/avatar.png" alt="...">
+					    </a>
+					  </div>
+					  <div class="media-body">
+					    	<h4 class="media-heading">Postd By David Webb</h4>
+						   <div class="content">
+						  	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure consectetur mollitia ipsa minima iste quia magnam, aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat.</p>
+						   </div>
+						   <footer>
+						   	<span class="time">10th May 2015 at 11:30 AM</span> <span class="humantime">45 Min Before</span>
+						   </footer>
+
+						   
+					  </div>
+					</div> <!-- media -->
+
+					<div class="media">
+					  <div class="media-left">
+					    <a href="#">
+					      <img class="media-object" src="img/avatar.png" alt="...">
+					    </a>
+					  </div>
+					  <div class="media-body">
+					    	<h4 class="media-heading">Postd By David Webb</h4>
+						   <div class="content">
+						  	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure consectetur mollitia ipsa minima iste quia magnam, aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat aliquam aut minus voluptas id voluptatibus sequi eligendi accusantium labore odit debitis reprehenderit fugiat.</p>
+						   </div>
+						   <footer>
+						   	<span class="time">10th May 2015 at 11:30 AM</span> <span class="humantime">45 Min Before</span>
+						   </footer>
+
+						   
+					  </div>
+					</div> <!-- media -->
+<span class="bubble">Previous</span>
 					<div class="media">
 					  <div class="media-left">
 					    <a href="#">
