--- a/html/create-new-discussion-thread.html
+++ b/html/create-new-discussion-thread.html
@@ -32,11 +32,11 @@
 								<div class="row">
 									<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 left">
 										<div class="form-group">
-											<label for="input-id" >Discussion topice/ Thread - Topic / Thread </label>
+											<label for="input-id" >Discussion Topics / Thread</label>
 											<input type="text" name="" id="input" class="form-control" value="" required="required" pattern="" title="">
 										</div>
 
-										<label for="input-id" >Discussion topice/ Thread - Note / Comments</label>
+										<label for="input-id" >Notes / Comments</label>
 										<div id="txtEditor">
 						        			4165
 						        		</div>
