--- a/create-project-works-discussion.html
+++ b/create-project-works-discussion.html
@@ -199,7 +199,7 @@
 					                                   </a>
 					                                 </div>
 					                                 <div class="media-body">
-					                                   <h4 class="media-heading"><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, illum</a></h4>
+					                                   <h4 class="media-heading"><a href="create-topic-discussion.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, illum</a></h4>
 					                                  	<div class="content">
 					                                  		body Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					                                  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
