--- a/html/app-update-profile.html
+++ b/html/app-update-profile.html
@@ -1,7 +1,7 @@
         <!-- @include html_Moudles/header.html -->
 
 
-        <!-- @include html_Moudles/nav.html -->     
+         <!-- @include html_Moudles/nav-3.html -->      
         
           <div class="content-page clearfix">
                 <div class="sidebar-page">                 
