--- a/exchange/html/list-due.html
+++ b/exchange/html/list-due.html
@@ -152,6 +152,7 @@
 	    		    	                                           <td class="width-38">
 																		<div class="bubble tbl__bubble--green">Label name</div>
 																		<div class="bubble tbl__bubble--blue">Label</div>
+																		<div class="bubble tbl__bubble--blue">Label</div>
 																		<div class="bubble tbl__bubble--green">Label name</div>
 																		<div class="bubble tbl__bubble--red">Label name</div>
 																		<a class="more" data-toggle="modal" data-target="#list-due-modal">More</a>
@@ -164,6 +165,7 @@
 	    		    	                                           <td class="width-38">
 																		<div class="bubble tbl__bubble--green">Label name</div>
 																		<div class="bubble tbl__bubble--blue">Label</div>
+																		<div class="bubble tbl__bubble--blue">Label</div>
 																		<div class="bubble tbl__bubble--green">Label name</div>
 																		<div class="bubble tbl__bubble--red">Label name</div>
 																		<a class="more">More</a>
@@ -175,6 +177,7 @@
 	    		    	                                           <td>Institution</td>
 	    		    	                                          <td class="width-38">
 																		<div class="bubble tbl__bubble--green">Label name</div>
+																		<div class="bubble tbl__bubble--blue">Label</div>
 																		<div class="bubble tbl__bubble--blue">Label</div>
 																		<div class="bubble tbl__bubble--green">Label name</div>
 																		<div class="bubble tbl__bubble--red">Label name</div>
