--- a/exchange/html/list-due.html
+++ b/exchange/html/list-due.html
@@ -129,7 +129,7 @@
 													    					Hovike
 													    				</label>
 													    			</div>
-													    			<span class="label lable-mehndi pull-right">Label Name</span>
+													    			<span class="label lable-red pull-right">Label Name</span>
 													    		</li>
 													    	</ul>
 													    	<a href="" class="btn btn-default">Continue to Next Step</a>
